  * Types-related optimizations for runtime operators (comparisons, FnBoolean, Or, And,
    Compare, instance-of, cast, castable, treat, promote).
  * Fixed bug #911585 (management of variables during eval)
  * Fixed bug #866423 (fn:empty and fn:exists iterators must reset their input in
    case of early-out)
  * Added index management function to the C++ api's StaticCollectionManager.
  * Fixed bug #905041 (allow for the default element and function namespaces to be
    set multiple times via the c++ api).
  * Fixed bug #907872 (segfault when returning an input ItemSequence from an external function).
  * Fixed bug #905050 (setting and getting the context item type via the c++ api).
  * Added createDayTimeDuration, createYearMonthDuration, createDocumentNode, createCommentNode, createPiNode to api's ItemFactory.
  * Added split function to the string module that allows for streamable tokenization but doesn't have regular expression
    support.
  * Fixed bug involving positional var and groupby 
  * Optimization: preallocate and reuse temp sequence iterator for LetVarITerator
    and CtxVarIterator.
  * Optimization: enhanced push-down of positional predicate into LetVarITerator
    and CtxVarIterator.
  * zerr is not predeclared anymore to be http://www.zorba-xquery.com/errors
  * Add new XQuery interface for the PHP bindings.
  * Added API method Item::getNamespaceBindings().
  * Added API method StaticContext::getNamespaceBindings() (see bug #905035)
  * Deprecated StaticContext:getNamespaceURIByPrefix()
  * Fixed bug 921624 (slow queries with bogus example.com schema URIs)
  * Fixed bug #918211 (xqueryx fulltext w3c conformance generation)
  * Fixed bug #918157 (Add XQFTTS to validation queue)
  * Fixed bug with unversioned modules with C++ external functions

version 2.1

New Features:
  * New node-position module. This module allows to obtain a representation of a node position, which
    can be used to assess structural relationships with other nodes.