@@ -1,0 +1,11 @@
+variable $x:=<y><a/></y>;
+
+insert node <b/> into $x/a;
+
+rename node $x/a/b as "a";
+
+<first>
+{
+$x//a
+}
+</first>
