@@ -17,6 +17,7 @@ version 2.2
   * Fixed bug #866423 (fn:empty and fn:exists iterators must reset their input in
     case of early-out)
   * Added index management function to the C++ api's StaticCollectionManager.
+  * Fixed bug #872288 (reset recursive flag during node rename)
   * Fixed bug #905041 (allow for the default element and function namespaces to be
     set multiple times via the c++ api).
   * Fixed bug #907872 (segfault when returning an input ItemSequence from an external function).
